# oldHakyllBlog

./: .gitignore  about.rst  blog.cabal  cssGenerator.hs  index.html  org2html  site.hs
css/: cssGenerator.hs  default.css  default.css.bak  tufte.css
fonts/: aquilinetwo-webfont.eot
posts/: 2012-08-12-spqr.markdown  2014-06-14-nixos-installation.markdown  2014-06-14-nuovo.markdown  2014-12-25-blog-construction-log.md  2014-12-25-hakyll-haskell-highlight.md  2015-12-05-Nuovo2.org  2015-12-06-a-lens-module-elencation.org  2015-12-06-a-top-down-lens-tutorial.org  2015-12-06-lens-tutorial.org  2015-12-06-profunctors-in-the-lens-library.org  2015-12-07-code.org  2015-12-07-functor-superclasses-in-the-lens-library.org  2015-12-08-common-lens-functions.org  2015-12-09-control-lens-plated.org  2015-12-13-an-introduction-to-control-lens-action.org  2015-12-14-lens-ontology-music-example.org  2015-12-14-lens-ontology-skyline-example.org  2016-01-03-electron.org  2016-01-07-blog-todo-before-primetime.org  2016-02-04-an-exploration-of-indexed-lens.org  2016-02-04-isomorphisms-and-prisms.org  2016-02-05-dash-doc-howto-stack.org
templates/: default.html  post-list.html  post.html
