name:                blog
version:             0.1.0.0
synopsis:            meditans personal blog
description:         Please see README.md
homepage:            http://github.com/meditans/blog
license:             BSD3
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2015 Carlo Nucera
category:            Blog
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , hakyll == 4.7.*

executable css
  main-is:             cssGenerator.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , clay